--- a/jupiter-core/Cargo.toml
+++ b/jupiter-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = { workspace = true }
 [dependencies]
 ahash = "0.8.11"
 anchor-lang = { workspace = true }
+anchor-spl = { workspace = true}
 solana-sdk = { workspace = true }
 solana-client = { workspace = true }
 solana-account-decoder = { workspace = true }
@@ -27,6 +28,7 @@ tokio = { workspace = true, features = ["full"] }
 assert_matches = "1.5.0"
 itertools = "0.12.1"
 clap = { version = "4.5.2", features = ["derive"] }
+uint = "0.10.0"
 
 # SPL
 spl-token = { workspace = true, features = ["no-entrypoint"] }
