--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["jupiter-core"]
+members = ["jupiter-core", "sega-cp-swap"]
 
 [workspace.package]
 edition = "2021"
